@startuml

skinparam classAttributeIconSize 0
hide empty attributes

package "<<aggregate>> ShowRequest" {
    class ShowRequest <<entity>> <<root>> {
    }

    class ShowRequestID <<id>> {
    }

    class Place <<value object>> {
    }

    class Date <<value object>> {
    }

    class Duration <<value object>> {
    }

    enum RequestState <<value object>> {
    }

    ShowRequest --> "1" ShowRequestID
    ShowRequest --> "1" Date
    ShowRequest --> "1" Place
    ShowRequest --> "1" Duration
    ShowRequest --> "1" RequestState
}

package "<<aggregate>> Customer" {
        class Customer <<entity>> <<root>> {
        }

        class VAT <<value object>> <<id>> {
        }

        class Name <<value object>> {
        }

        class Address <<value object>> {
        }

        enum CustomerState <<value object>> {
        }

        enum CustomerType <<value object>> {
        }

        Customer --> VAT
        Customer --> Name
        Customer --> CustomerState
        Customer --> CustomerType
        Customer --> Address
}

ShowRequest --> "1" Customer : requestedBy

@enduml